[package]
name = "libtest"
version = "0.1.0"
authors = ["root <root@silviaseDESTKTOP.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.1", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"