[package]
name = "opt"
version = "0.1.0"
authors = ["root <root@silviaseDESTKTOP.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
gnuplot = "0.0.37"
nalgebra = "0.22.0"

[[bin]]
name = "opt1"
path = "src/opt1.rs"
